JCR-2087 Upgrade to Java 5 as the base platform
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@773554 13f79535-47bb-0310-9956-ffa450edef68